--- a/MyCCompiler/MyCCompiler.csproj
+++ b/MyCCompiler/MyCCompiler.csproj
@@ -49,8 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analysis\SymbolTableListener.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Analysis\SymbolTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
