Introduce Analysis.Symbol type

--- a/MyCCompiler/MyCCompiler.csproj
+++ b/MyCCompiler/MyCCompiler.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analysis\Symbol.cs" />
     <Compile Include="Analysis\SymbolTableListener.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
