--- a/MyCCompiler/MyCCompiler.csproj
+++ b/MyCCompiler/MyCCompiler.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analysis\Primitive.cs" />
+    <Compile Include="Analysis\IType.cs" />
     <Compile Include="Analysis\Symbol.cs" />
     <Compile Include="Analysis\SymbolTableListener.cs" />
     <Compile Include="Program.cs" />
