--- a/MyCCompiler/MyCCompiler.csproj
+++ b/MyCCompiler/MyCCompiler.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Analysis\IType.cs" />
     <Compile Include="Analysis\Symbol.cs" />
     <Compile Include="Analysis\SymbolTableListener.cs" />
+    <Compile Include="AST\CompilationUnit.cs" />
+    <Compile Include="AST\CompilationUnitVisitor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Analysis\SymbolTable.cs" />
