--- a/MyCCompiler/MyCCompiler.csproj
+++ b/MyCCompiler/MyCCompiler.csproj
@@ -49,16 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analysis\IType.cs" />
-    <Compile Include="Analysis\Symbol.cs" />
-    <Compile Include="Analysis\SymbolTableListener.cs" />
     <Compile Include="AST\AstBuilder.cs" />
     <Compile Include="AST\Ast.cs" />
     <Compile Include="AST\Symbol.cs" />
     <Compile Include="AST\SymbolBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Analysis\SymbolTable.cs" />
+    <Compile Include="AST\SymbolTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
